--- a/Introducao a criacao de Websites com html5 e css3/01.01-Estrutura basica/style.css
+++ b/Introducao a criacao de Websites com html5 e css3/01.01-Estrutura basica/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #e7e6e6;
     font-family: Verdana;
+    max-width: 700px;
+    margin: auto;
 }
 
 .foto_perfil{
@@ -50,12 +52,13 @@ a {
     margin: 0;
     margin-bottom: 15px;
     text-transform: capitalize;
+    text-align: justify;
 }
 
 
 .post_imagem{
     margin-bottom: 15px;
-    width: 400px ;
+    width: 100% ;
     height: 200px;
 }
 
